--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "data-viz",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://holaholu.github.io/business_dashboard",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
